# anonsearch

./: README.md
lib/: CMakeLists.txt
lib/include/: anonsearch.h  engine.h
lib/include/engines/: answers.h  brave.h  duckduckgo.h  ip_api.h  mojeek.h  wikipedia.h  yahoo.h
lib/src/engines/: answers.cpp  brave.cpp  duckduckgo.cpp  engine.cpp  ip_api.cpp  mojeek.cpp  wikipedia.cpp  yahoo.cpp
website/backend/: CMakeLists.txt  config.h  helper.cpp  helper.h  main.cpp
website/frontend/css/: index.css  page.css  search.css
website/frontend/src/: index.html  search.html
